--- a/java/rapidrake/pom.xml
+++ b/java/rapidrake/pom.xml
@@ -17,4 +17,19 @@
 		  <version>1.8.1</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<fork>true</fork>
+          <executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
