--- a/java/rapidrake/pom.xml
+++ b/java/rapidrake/pom.xml
@@ -27,8 +27,23 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<fork>true</fork>
-          <executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable>
+          			<executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}</outputDirectory>
+							<includeScope>runtime</includeScope>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
