--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,9 @@ Title: A Fast Implementation of the Rapid Automatic Keyword Extraction (RAKE)
 Version: 0.0.0.9000
 Authors@R: person("Christopher", "Baker", email = "chriscrewbaker@gmail.com",
     role = c("aut", "cre"))
-Description: Provides a mostly Java-based implementation of the RAKE algorithm, 
-    which can be used to extract keywords from documents without any training 
-    data.
+Description: A mostly pure-Java implementation of the RAKE algorithm (Rose, S., 
+  Engel, D., Cramer, N. and Cowley, W. (2010) <doi:10.1002/9780470689646.ch1>), 
+  which can be used to extract keywords from documents without any training data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -15,12 +15,13 @@ Depends:
     R (>= 3.1)
 Imports:
     rJava,
+    openNLPdata,
     slowraker,
-    openNLPdata
+    utils
 Suggests:
     knitr,
     rmarkdown,
     testthat
 SystemRequirements:
-    Java (>= 8.0)
+    Java (>= 7.0)
 RoxygenNote: 6.0.1.9000
