--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
 language: R
-sudo: false
-cache: packages
+sudo: required
 
 matrix:
   include:
   - r: oldrel
   - r: release
   - r: devel
-  - os: osx
-
-branches:
-  except:
-  - dev
 
 notifications:
   email: false
+
+addons:
+  apt:
+    packages:
+      - openjdk-7-jdk
+      - maven
+
+before_install:
+  - sudo R CMD javareconf
+  - make build-jar
