--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,14 @@ Package: rapidraker
 Type: Package
 Title: A Fast Implementation of the Rapid Automatic Keyword Extraction (RAKE) 
     Algorithm
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: person("Christopher", "Baker", email = "chriscrewbaker@gmail.com",
     role = c("aut", "cre"))
 Description: A mostly pure-Java implementation of the RAKE algorithm (Rose, S., 
   Engel, D., Cramer, N. and Cowley, W. (2010) <doi:10.1002/9780470689646.ch1>), 
   which can be used to extract keywords from documents without any training data.
+URL: https://crew102.github.io/slowraker/articles/rapidraker.html
+BugReports: https://github.com/crew102/rapidraker/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
