Add license file to appease CRAN warning

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: A 'Java' implementation of the RAKE algorithm (Rose, S., Engel, D.,
   be used to extract keywords from documents without any training data.
 URL: https://crew102.github.io/slowraker/articles/rapidraker.html
 BugReports: https://github.com/crew102/rapidraker/issues
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends:
