--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Rapid Automatic Keyword Extraction (RAKE) Algorithm
 Version: 0.1.1
 Authors@R: person("Christopher", "Baker", email = "chriscrewbaker@gmail.com",
     role = c("aut", "cre"))
-Description: A 'Java' implementation of the RAKE algorithm (Rose, S., Engel, D., 
-  Cramer, N. and Cowley, W. (2010) <doi:10.1002/9780470689646.ch1>), which can 
+Description: A 'Java' implementation of the RAKE algorithm ('Rose', S., 'Engel', D., 
+  'Cramer', N. and 'Cowley', W. (2010) <doi:10.1002/9780470689646.ch1>), which can 
   be used to extract keywords from documents without any training data.
 URL: https://crew102.github.io/slowraker/articles/rapidraker.html
 BugReports: https://github.com/crew102/rapidraker/issues
